--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ body {
   font-size: 34px;
 }
 /* ----main  */
+.margini{
+  height: calc(100vh - 65px);
+}
 
 .cont-init{
   display: flex;
@@ -23,7 +26,7 @@ body {
 
 #view,
 #arrows{
-  margin: 20px 5px 0 ;
+  margin: 20px 5px 0 0 ;
   background-color: grey;
   padding: 5px;
   color: white;
@@ -33,7 +36,7 @@ body {
 .container-flex-tot{
     display: flex;
     justify-content: center;
-    padding: 33.5px 0;
+    padding-top: 30px;
     
 }
 
@@ -49,7 +52,6 @@ body {
 }
 
 .container-flex-main{
-    height: calc(100vh - 120px) ;
     width: 90%;
     display: flex;
     justify-content: center;
@@ -60,7 +62,6 @@ body {
 
  .container-flex-main div{
     position: relative;
-    margin: 5px 2px;
 }
  .container-flex-main div p{
     position: absolute;
@@ -94,6 +95,10 @@ img{
   
 }
 
+.margini-div{
+  margin: 0 2px;
+}
+
 .container-flex-right{
     display: flex;
     flex-direction: column;
@@ -112,6 +117,7 @@ img{
 footer{
     color: white;
     background-color:#212324 ;
+    height: 65px;
 
 }
 
@@ -120,7 +126,7 @@ footer{
 }
 
 .cont-video i {
-  font-size: 24px;
+  font-size: 22px;
   margin-bottom: 7px;
 }
 
@@ -168,6 +174,7 @@ footer{
     padding:0 30px
 }
 .right-foot {
+  height: 65px;
   width: 10%;
   background-color:#4a4b4d ;
   display: flex;
@@ -207,3 +214,4 @@ footer{
 .debug .main-foot {
   background-color: green;
 }
+
